--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food</title>
+    <link rel="stylesheet" href="style.css">
+       <title>Food</title>
 </head>
 <body>
-    <nav>
-        <a href="">Home</a>
+    <main>
+    <nav> 
+        <img src="abinci.jpeg" alt="logo" id="logo">
+        <div class="nav">
+        <a href="#" id="home">Home</a>
+        <a href="#">Foods</a>
+        <a href="#">Success Stories</a>
+        <a href="#">About</a>
+        <a href="#">Sign up</a> 
+    </div>
     </nav>
-
+    <section>
+        <h1>DELICIOUS FOOD</h1>
+        <p>Delicious food, color, aroma and taste. What are you waiting for?</p>
+        <input type="email" name="mail" id="email" placeholder="rwds@example.com">
+        <button>Confirm</button>
+    </section>
+</main>
+    <footer></footer>
+    
 </body>
 </html>
